--- a/src/main/resources/static/templates/album.html
+++ b/src/main/resources/static/templates/album.html
@@ -8,3 +8,5 @@
         </ul>
     </li>
 </ul>
+<input type="file" ng-model="file" name="file" base-sixty-four-input required onload="onLoad" accept="image/*">
+<button ng-click="$album.saveImage()">save</button>
